# wgpu-practice

./: .gitignore  Cargo.toml  README.md
shaders/: shader.wgsl
src/: app.rs  camera.rs  instance.rs  main.rs  state.rs  texture.rs  utils.rs  vertex.rs
