[package]
name = "wgpu-practice"
version = "0.8.1"
edition = "2024"
authors = ["SQD.exe"]
description = "A practice project for learning basics of WGPU"

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.8"
image = { version = "0.25.6", default-features = false, features = ["png"] }
log = { version = "0.4.27", features = ["max_level_trace", "release_max_level_off"] }
pollster = "0.4.0"
wgpu = "26.0.1"
winit = "0.30.12"